# teleop_starai_franka

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: leader_arm_rviz.launch.py
leader_arm_viz/: end_effector_publisher.py  leader_joint_publisher.py  read_leader.py
log/: latest_build
meshes/: link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7_left.STL  link7_right.STL
rviz/: view.rviz
scripts/: franky_conroller.py
urdf/: cello_description.urdf  fr3.urdf
