<?xml version="1.0"?>
<package format="3">
    <name>leader_arm_viz</name>
    <version>0.0.1</version>
    <description>Leader arm visualization and joint state publishing.</description>

    <maintainer email="zdli@ucsc.edu">Zi Tao Li</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <exec_depend>numpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
